--- a/src/games/memory_game/css/style.css
+++ b/src/games/memory_game/css/style.css
@@ -149,7 +149,20 @@ nav i:nth-child(3) {
   border-radius: 5px;
   border: 1px solid var(--main-color);
 }
-
+.card::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  background-color: transparent;
+  transition-duration: 0.3s;
+}
+.card.right::before {
+  background-color: rgba(54, 255, 54, 0.3);
+}
 .card.flipped {
   transform: rotateY(180deg);
 }
@@ -183,4 +196,69 @@ nav i:nth-child(3) {
 .card .card-back {
   transform: rotateY(180deg);
   background-color: red;
+}
+
+/* GAME INFO */
+#game-info {
+  display: flex;
+  width: 100%;
+  padding: 5px 20px;
+  gap: 10px;
+}
+@media (max-width: 510px) {
+  #game-info {
+    flex-direction: column;
+  }
+  .info-cont .text-info {
+    flex-direction: column;
+  }
+}
+.info-cont {
+  background-color: var(--secondary-color);
+  padding: 15px;
+  border: 1px solid var(--border-color);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: var(--secondary-text-color);
+}
+.info-cont .text-info {
+  display: flex;
+  gap: 5px;
+}
+.info-cont .text-info .time {
+  color: var(--text-color);
+}
+.info-cont .time-content {
+  display: flex;
+  gap: 5px;
+}
+.info-cont .progress {
+  width: 100%;
+  height: 10px;
+  background-color: var(--border-color);
+  border-radius: 50px;
+  margin-top: 10px;
+  position: relative;
+}
+.info-cont .progress span {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: var(--main-color);
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  transition-duration: 0.3s;
+}
+.lives-content {
+  display: flex;
+  gap: 5px;
+  justify-content: center;
+  align-items: center;
+}
+.lives-content i {
+  color: #e23636;
 }
