--- a/src/games/memory_game/css/style.css
+++ b/src/games/memory_game/css/style.css
@@ -76,6 +76,25 @@ nav i:nth-child(3) {
   font-size: 18px;
 }
 
+#counter {
+  display: none;
+  align-items: center;
+  justify-content: center;
+  /* height: 100vh;
+  width: 100%; */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: fixed;
+  font-size: 160px;
+  color: var(--back-color);
+  z-index: 1;
+  font-weight: bold;
+}
+#counter.show {
+  display: flex;
+}
+
 /* SETTINGS */
 #settings-cont {
   width: 100%;
@@ -94,6 +113,7 @@ nav i:nth-child(3) {
   justify-content: center;
   background-color: var(--secondary-color);
   border: 2px solid var(--border-color);
+  cursor: pointer;
 }
 #settings-btn {
   color: var(--main-color);
@@ -229,7 +249,7 @@ nav i:nth-child(3) {
 
 .card .card-back {
   transform: rotateY(180deg);
-  background-color: red;
+  background-color: var(--back-color-2);
 }
 
 /* GAME INFO */
@@ -271,7 +291,7 @@ nav i:nth-child(3) {
 .info-cont .progress {
   width: 100%;
   height: 10px;
-  background-color: var(--border-color);
+  background-color: var(--input-color);
   border-radius: 50px;
   margin-top: 10px;
   position: relative;
@@ -386,10 +406,6 @@ nav i:nth-child(3) {
 #game-end-mistakes i {
   color: #e23636;
 }
-#game-end-score i,
-#game-end-score .game-end-val {
-  color: #f9c833;
-}
 #play-again {
   padding: 10px 20px;
   margin-top: 20px;
@@ -463,6 +479,7 @@ nav i:nth-child(3) {
   border: 1px solid var(--border-color);
   color: var(--back-color);
   border-radius: 8px;
+  cursor: pointer;
 }
 #grid-options-row span.selected {
   background-color: var(--main-color);
@@ -485,7 +502,7 @@ nav i:nth-child(3) {
   background-image: linear-gradient(
     to right,
     var(--main-color),
-    var(--main-color)
+    var(--input-color)
   );
 }
 #settings-dialog input[type="range"]::-webkit-slider-thumb {
@@ -562,6 +579,10 @@ nav i:nth-child(3) {
 #leader-dialog::-webkit-scrollbar {
   display: none;
 }
+#leader-options {
+  display: flex;
+  justify-content: flex-end;
+}
 .leader-entry {
   display: flex;
   justify-content: space-between;
@@ -583,9 +604,7 @@ nav i:nth-child(3) {
   gap: 2px;
   color: var(--secondary-text-color);
 }
-.leader-score {
-  color: #ffcc33;
-}
+
 .delete-leader-entry {
   cursor: pointer;
   color: palevioletred;
